<resources>
    <string name="app_name">SF5Tasks</string>
    <string name="create">Создание заданий</string>
    <string name="type">Тип</string>
    <string name="xp">XP</string>
    <string name="points">Баллы</string>
    <string name="time">Кол-во дней</string>
    <string name="goal">Кол-во для выполнения</string>

    <string-array name="types">
        <item>Тип</item>
        <item>Задание</item>
        <item>Челлендж</item>
    </string-array>

    <string-array name="goals">
        <item>Кол-во для выполения</item>
        <item>1</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
    </string-array>

    <string-array name="times">
        <item>Кол-во дней</item>
        <item>1</item>
        <item>3</item>
        <item>7</item>
    </string-array>

    <string-array name="xps">
        <item>XP</item>
        <item>10</item>
        <item>30</item>
        <item>70</item>
    </string-array>

    <string-array name="points">
        <item>Баллы</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>100</item>
    </string-array>
</resources>