<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="380sp"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/light_gray_outline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="350sp"
        android:layout_height="100sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/view3"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view4"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view5"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view4" />

    <View
        android:id="@+id/view6"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <View
        android:id="@+id/view7"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_outline"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create"
        android:textColor="@color/ui_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <EditText
        android:id="@+id/text_et"
        android:layout_width="320sp"
        android:layout_height="70sp"
        android:background="@null"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Введите текст задания"
        android:textColor="@color/ui_gray"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="350sp"
        android:layout_height="60sp"
        android:layout_marginTop="16dp"
        android:background="@drawable/red_outline"
        android:text="Добавить"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <Spinner
        android:id="@+id/type_spinner"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:entries="@array/types"
        android:contentDescription="@string/type"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:entries="@array/times"
        android:contentDescription="@string/time"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintEnd_toEndOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/goal_spinner"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:entries="@array/goals"
        android:contentDescription="@string/goal"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:layout_constraintVertical_bias="0.4" />

    <Spinner
        android:id="@+id/xp_spinner"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:entries="@array/xps"
        android:contentDescription="@string/xp"
        app:layout_constraintBottom_toBottomOf="@+id/view6"
        app:layout_constraintEnd_toEndOf="@+id/view6"
        app:layout_constraintStart_toStartOf="@+id/view6"
        app:layout_constraintTop_toTopOf="@+id/view6" />

    <Spinner
        android:id="@+id/points_spinner"
        android:layout_width="330sp"
        android:layout_height="50sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:entries="@array/points"
        android:contentDescription="@string/points"
        app:layout_constraintBottom_toBottomOf="@+id/view7"
        app:layout_constraintEnd_toEndOf="@+id/view7"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>